# OptiMIMO

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Toole Trained Listeners only.txt  build.py  config_ir.json  example_config.json  mimo_room_correction.py  optiMIMO.spec  optiMIMO_launcher.py  pyproject.toml  pytest.ini  requirements.txt  roomCurve_BobKatz.txt  runtime_hook_stdlib.py
.github/workflows/: release.yml  test.yml
images/: optimimo.icns
mimo_acoustic/: cli.py  util.py
mimo_acoustic/core/: smoothing.py
mimo_acoustic/export/: camilladsp.py
mimo_acoustic/gui/: analysis_tab.py  app.py  config_tab.py  file_picker.py  measurements_tab.py  plots.py  run_tab.py  state.py
optimimo/: __init__.py  __main__.py  cli.py  defaults.py  util.py
optimimo/core/: delay_estimator.py  io.py  pipeline.py  rew.py  smoothing.py  solver.py  targets.py  wav.py
optimimo/export/: camilladsp.py  firs.py
optimimo/gui/: analysis_tab.py  app.py  config_tab.py  file_picker.py  measurements_tab.py  plots.py  run_tab.py  state.py
scripts/: build_icons.py
tests/: gui_main.py  test_arrivals.py  test_auto_assign.py  test_config_interactive.py  test_config_refresh.py  test_delay_estimator.py  test_gui.py  test_measurement_pattern.py  test_plots.py  test_rew.py  test_ui_conditional.py
